Setup repository for draft-ietf-add-ddr using https://github.com/martinthomson/i-d-template

--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -32,7 +32,9 @@ jobs:
     - name: "Cache References"
       uses: actions/cache@v2
       with:
-        path: ${{ steps.cache-setup.outputs.path }}
+        path: |
+          ${{ steps.cache-setup.outputs.path }}
+          .targets.mk
         key: refcache-${{ steps.cache-setup.outputs.date }}
         restore-keys: |
           refcache-${{ steps.cache-setup.outputs.date }}
@@ -48,12 +50,9 @@ jobs:
         make: gh-pages
         token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: "Save HTML"
+    - name: "Archive Built Drafts"
       uses: actions/upload-artifact@v2
       with:
-        path: "*.html"
-
-    - name: "Save Text"
-      uses: actions/upload-artifact@v2
-      with:
-        path: "*.txt"
+        path: |
+          draft-*.html
+          draft-*.txt
